# fondue

./: .gitignore  CMakeLists.txt  README.md
config_files/: config.json
draft_pc_files/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
examples/: decode_packet.cpp  default_input_stream.cpp  default_input_stream.h  load_frame.cpp  mux_example.cpp  open_codec_context.cpp  save_frame.cpp  stefano_timing.cpp
lib/FFmpeg/: CMakeLists.txt
src/: DefaultInputStream.cpp  FFMPEGString.cpp  Fonduempeg.h  InputStream.cpp  InputStream.h  OutputStream.cpp  add_stream.cpp  decode_packet.cpp  demux_decode.cpp  encode_example.cpp  fondue.cpp  get_format_from_sample_fmt.cpp  load_frame.cpp  main.cpp  misc_functions.cpp  mux_example.cpp  open_codec_context.cpp  output_audio_frame.cpp  save_frame.cpp
src - Copy/: DefaultInputStream.cpp  Fonduempeg.h  InputStream.cpp  OutputStream.cpp  main.cpp
